# voxelx

./: .gitignore  CMakeLists.txt  CMakeListstt.txt  README.md  camera.cpp  entity.h  gameobject.cpp  gameobject.h  input.cpp  main.cpp  object.cpp  object.h  vox_file.h  window.h
docs/html/: annotated.html  annotated_dup.js  batch2d_8h_source.html  batch3d_8h_source.html  boxcollider_8h.html  boxcollider_8h.js  boxcollider_8h_source.html  camera_8h.html  camera_8h.js  camera_8h_source.html  class_batch2_d-members.html  class_batch2_d.html  class_batch3_d-members.html  class_batch3_d.html  class_box_collider-members.html  class_box_collider.html  class_camera-members.html  class_camera.html  class_entity-members.html  class_entity.html  class_g_u_i-members.html  class_g_u_i.html  class_game_manager-members.html  class_game_manager.html  class_game_object-members.html  class_game_object.html  class_game_object.js  class_input-members.html  class_input.html  class_mesh-members.html  class_mesh.html  class_physics_engine-members.html  class_physics_engine.html  class_physics_object-members.html  class_physics_object.html  class_renderer-members.html  class_renderer.html  class_resource_manager-members.html  class_resource_manager.html  class_shader-members.html  (+126 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_8.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  search.css  (+1 more)
docs/latex/: annotated.tex  batch2d_8h_source.tex  batch3d_8h_source.tex  boxcollider_8h.tex  boxcollider_8h_source.tex  camera_8h.tex  camera_8h_source.tex  class_batch2_d.tex  class_batch3_d.tex  class_box_collider.tex  class_camera.tex  class_entity.tex  class_g_u_i.tex  class_game_manager.tex  class_game_object.eps  class_game_object.tex  class_input.tex  class_mesh.tex  class_physics_engine.tex  class_physics_object.tex  class_renderer.tex  class_resource_manager.tex  class_shader.tex  class_sprite.tex  class_task_scheduler.tex  class_texture.tex  class_transform_object.eps  class_transform_object.tex  class_u_v_region.tex  class_voxel.tex  class_voxel_model.tex  class_voxel_particles.tex  class_window.tex  entity_8h_source.tex  files.tex  gamemanager_8h.tex  gamemanager_8h_source.tex  gameobject_8h.tex  gameobject_8h_source.tex  gui_8h_source.tex  (+37 more)
editor/: CMakeLists.txt
editor/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  voxopenglwidget.cpp  voxopenglwidget.h
editor/src/ui/: mainwindow.ui
graphics/: mesh.cpp  mesh.h  particles.cpp  particles.h  shader.cpp  shader.h  texture.cpp  vox_renderer.cpp  vox_renderer.h  voxelrenderer.cpp  voxelrenderer.h
lib/: CMakeLists.txt
lib/src/: main.cpp
lib/src/gamesystems/: camera.h  gamemanager.h  gameobject.cpp  gameobject.h  linesobject.cpp  linesobject.h  transformobject.cpp  transformobject.h
lib/src/graphics/: batch3d.cpp  mesh.cpp  mesh.h  renderer.cpp  shader.h  textmesh.cpp  uvregion.cpp  uvregion.h  voxelparticles.h
lib/src/graphics/types/: octotree.cpp  octotree.h
lib/src/loaders/: png_loading.cpp  png_loading.h  resourcemanager.cpp  resourcemanager.h
lib/src/physics/: physics.h  physicsengine.cpp  physicsengine.h
lib/src/system/: taskscheduler.cpp
lib/src/utilities/: utils.h  vtype.cpp  vtype.h
lib/src/voxels/: voxel.h  voxelmodel.cpp  voxelmodel.h
lib/src/window/: input.cpp  input.h  window.cpp  window.h
loaders/: png_loading.cpp  png_loading.h  resourceloader.cpp  resourceloader.h  resourceloader.x  vox_loading.h
res/models/: apple.voxtxt  bread.voxtxt  goblin.voxtxt  goblinArmLeft.voxtxt  goblinLegLeft.voxtxt  goblinLegRight.voxtxt  goblintorso.voxtxt  null.voxtxt  watertest.txt  watertest.voxtxt
res/particles/: testgravity.voxpart  what.voxpart
res/shaders/: bbox.glslf  bbox.glslv  crosshair.glslf  crosshair.glslv  font.glslf  font.glslv  main.glslf  main.glslv  octoline.glslf  octoline.glslv  particle.glslv  texture.glslf  texture.glslv  ui.glslf  ui.glslv  voxel.glslf  voxel.glslv
src/: main.cpp  utils.cpp  utils.h
src/gamesystems/: camera.cpp  camera.h  gamemanager.cpp  gamemanager.h  gameobject.cpp  gameobject.h  linesobject.cpp  linesobject.h  transformobject.cpp  transformobject.h
src/graphics/: batch2d.cpp  batch2d.h  batch3d.cpp  batch3d.h  cube.h  gui.cpp  gui.h  mesh.cpp  mesh.h  particles.cpp  particles.h  renderer.cpp  renderer.h  shader.cpp  shader.h  sprite.cpp  sprite.h  textmesh.cpp  textmesh.h  texture.cpp  texture.h  vox_renderer.cpp  vox_renderer.h  voxelparticles.cpp  voxelparticles.h
src/graphics/types/: material.h  octotree.cpp  octotree.h
src/loaders/: resourceloader.cpp  resourcemanager.cpp  resourcemanager.h  vox_loading.cpp
src/physics/: boxcollider.cpp  boxcollider.h  physics.cpp  physics.h  physicsengine.cpp  physicsengine.h
src/system/: taskscheduler.h
src/utilities/: logger.cpp  logger.h  utils.cpp
src/voxels/: particlesmodel.cpp  particlesmodel.h  voxel.cpp  voxel.h  voxelmodel.cpp  voxelmodel.h
src/window/: input.cpp  input.h  newinput.cpp  newinput.h  newwindow.cpp  newwindow.h  window.cpp  window.h
voxels/: chunk.cpp  chunk.h  chunks.cpp  chunks.h  voxel.cpp  voxel.h
